@@ -64,14 +64,14 @@ if (!isEclipse) {
   }
 
   compileJava11Java {
-    sourceCompatibility = 11
-    targetCompatibility = 11
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
   }
 
   tasks.named('forbiddenApisJava11').configure {
     doFirst {
       if (BuildParams.runtimeJavaVersion < JavaVersion.VERSION_11) {
-        targetCompatibility = JavaVersion.VERSION_11.getMajorVersion()
+        targetCompatibility = JavaVersion.VERSION_11
       }
     }
   }
@@ -97,7 +97,7 @@ dependencies {
 
   // lucene
   api "org.apache.lucene:lucene-core:${versions.lucene}"
-  api "org.apache.lucene:lucene-analyzers-common:${versions.lucene}"
+  api "org.apache.lucene:lucene-analysis-common:${versions.lucene}"
   api "org.apache.lucene:lucene-backward-codecs:${versions.lucene}"
   api "org.apache.lucene:lucene-grouping:${versions.lucene}"
   api "org.apache.lucene:lucene-highlighter:${versions.lucene}"
@@ -131,8 +131,8 @@ dependencies {
   api "org.apache.logging.log4j:log4j-api:${versions.log4j}"
   api "org.apache.logging.log4j:log4j-core:${versions.log4j}", optional
 
-  // repackaged jna with native bits linked against all supported platforms
-  api "org.elasticsearch:jna:${versions.jna}"
+  // jna
+  api "net.java.dev.jna:jna:${versions.jna}"
 
   testImplementation(project(":test:framework")) {
     // tests use the locally compiled version of server
@@ -182,7 +182,7 @@ tasks.named("testingConventions").configure {
     naming.clear()
     naming {
         Tests {
-            baseClass "org.apache.lucene.util.LuceneTestCase"
+            baseClass "org.apache.lucene.tests.util.LuceneTestCase"
         }
         IT {
             baseClass "org.opensearch.test.OpenSearchIntegTestCase"
@@ -227,7 +227,6 @@ tasks.named("thirdPartyAudit").configure {
             'com.fasterxml.jackson.databind.ObjectMapper',
 
             // from log4j
-            'com.conversantmedia.util.concurrent.DisruptorBlockingQueue',
             'com.conversantmedia.util.concurrent.SpinPolicy',
             'com.fasterxml.jackson.annotation.JsonInclude$Include',
             'com.fasterxml.jackson.databind.DeserializationContext',
@@ -251,8 +250,6 @@ tasks.named("thirdPartyAudit").configure {
             'com.fasterxml.jackson.databind.node.ObjectNode',
             'org.fusesource.jansi.Ansi',
             'org.fusesource.jansi.AnsiRenderer$Code',
-            'com.lmax.disruptor.BlockingWaitStrategy',
-            'com.lmax.disruptor.BusySpinWaitStrategy',
             'com.lmax.disruptor.EventFactory',
             'com.lmax.disruptor.EventTranslator',
             'com.lmax.disruptor.EventTranslatorTwoArg',
@@ -262,10 +259,7 @@ tasks.named("thirdPartyAudit").configure {
             'com.lmax.disruptor.RingBuffer',
             'com.lmax.disruptor.Sequence',
             'com.lmax.disruptor.SequenceReportingEventHandler',
-            'com.lmax.disruptor.SleepingWaitStrategy',
-            'com.lmax.disruptor.TimeoutBlockingWaitStrategy',
             'com.lmax.disruptor.WaitStrategy',
-            'com.lmax.disruptor.YieldingWaitStrategy',
             'com.lmax.disruptor.dsl.Disruptor',
             'com.lmax.disruptor.dsl.ProducerType',
             'javax.jms.Connection',
@@ -284,25 +278,17 @@ tasks.named("thirdPartyAudit").configure {
             'javax.mail.Transport',
             'javax.mail.internet.InternetAddress',
             'javax.mail.internet.InternetHeaders',
-            'javax.mail.internet.MimeBodyPart',
             'javax.mail.internet.MimeMessage',
             'javax.mail.internet.MimeMultipart',
             'javax.mail.internet.MimeUtility',
-            'javax.mail.util.ByteArrayDataSource',
             'org.apache.commons.compress.compressors.CompressorStreamFactory',
             'org.apache.commons.compress.utils.IOUtils',
             'org.apache.commons.csv.CSVFormat',
             'org.apache.commons.csv.QuoteMode',
-            'org.apache.kafka.clients.producer.Callback',
-            'org.apache.kafka.clients.producer.KafkaProducer',
             'org.apache.kafka.clients.producer.Producer',
-            'org.apache.kafka.clients.producer.ProducerRecord',
             'org.apache.kafka.clients.producer.RecordMetadata',
             'org.codehaus.stax2.XMLStreamWriter2',
-            'org.jctools.queues.MessagePassingQueue$Consumer',
             'org.jctools.queues.MpscArrayQueue',
-            'org.osgi.framework.AdaptPermission',
-            'org.osgi.framework.AdminPermission',
             'org.osgi.framework.Bundle',
             'org.osgi.framework.BundleActivator',
             'org.osgi.framework.BundleContext',
@@ -354,4 +340,10 @@ tasks.named("licenseHeaders").configure {
     excludes << 'org/apache/lucene/search/RegExp87*'
     excludes << 'org/apache/lucene/search/RegexpQuery87*'
     excludes << 'org/opensearch/client/documentation/placeholder.txt'
+}
+
+tasks.test {
+    if (BuildParams.runtimeJavaVersion > JavaVersion.VERSION_1_8) {
+        jvmArgs += ["--add-opens", "java.base/java.nio.file=ALL-UNNAMED"]
+    }
 }
